Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113646

Shadows are sometimes messed up with OptimizationDefault

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • None
    • 6.6
    • Graphs: 3D
    • None
    • 8979bd822 (dev), f4c345b0f (6.6)

    Description

      With instancing in use (i.e. when using OptimizationDefault), if you switch off both background and background grid, the graph gets shadowed incorrectly.

      Steps to reproduce in widgetgraphgallery:

      • go to Scatter Graph
      • toggle Show background off
      • toggle Show grid off

      -> shadows get wonky

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              spouke Sakaria Pouke
              tokorpip Tomi Korpipää
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes