Fix instancing shadow

Quickfix to the problem. Using Instancing causes the shadow map bounds
to be incorrect so this fix changes isBackgroundEnabled to set the background opacity to 0 instead of visible to false to preserve the same bounds.

Pick-to: 6.6
Task-number: QTBUG-113646
Change-Id: I262d441ad4eb566a80ac9a09ed397ec7b36efda3
Reviewed-by: Kwanghyo Park <kwanghyo.park@qt.io>
Reviewed-by: Dilek Akcay <dilek.akcay@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>